<resources>
    <string name="app_name">SkyTorrents</string>
    <string name="app_description">Free torrent browser</string>

    <!-- layout:activity_main -->
    <string name="title">SkyTorrents.in</string>

    <!-- menu:menu_activity_main -->
    <string name="action_sort">Sort</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_visit_skytorrents">Visit SkyTorrents.in</string>
    <string name="search_hint">Search torrent&#8320;</string>
    <string name="retry">Retry</string>

    <!-- layout:torrent_list_item -->
    <string name="file_size">File Size</string>
    <string name="seeds">Seeds</string>
    <string name="peers">Peers</string>

    <!-- layout:content_torrent_info -->
    <string name="button_open_link">OPEN LINK</string>
    <string name="button_copy_magnet_link">COPY MAGNET LINK</string>

    <!-- Context Menu [sorting] -->
    <string name="action_sort_by_relevance">Relevance</string>
    <string name="action_sort_by_seeds_desc">Seeds DSC</string>
    <string name="action_sort_by_seeds_asc">Seeds ASC</string>
    <string name="action_sort_by_peers_desc">Peers DSC</string>
    <string name="action_sort_by_peers_asc">Peers ASC</string>
    <string name="action_sort_by_big_to_small">Big to small</string>
    <string name="action_sort_by_small_to_big">Small to big</string>
    <string name="action_sort_by_latest">Latest</string>
    <string name="action_sort_by_oldest">Oldest</string>
    <string name="title_activity_torrent_info">TorrentInfoActivity</string>

    <string name="network_error">
        Please check your internet connection!
        If this website is blocked by isp, try again using
        free vpn apps like operaVpn, hotspot shield etc.
    </string>

    <!-- menu:activity_torrent_info-->
    <string name="share">share</string>
    <string name="open_in_browser">Open url in browser</string>

    <!-- layout: about -->
    <string name="dialog_text_source_code"><u>Source code</u></string>
    <string name="dialog_text_visit_website"><u>My website</u></string>
    <string name="dialog_desc">
        All the data shown here is retrieved from skytorrents.in.
        I dont own any content displayed in this app. Visit there website
        to browse latest torrents.
    </string>
</resources>
