<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blackText"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/app_name"/>

    <TextView
        android:paddingTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/secondaryText"
        android:gravity="center"
        android:text="@string/app_description"/>

    <TextView
        android:background="@color/layoutBackgroundLight"
        android:layout_marginTop="8dp"
        android:padding="6dp"
        android:gravity="center"
        android:textColor="@color/blackText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_desc"/>

    <TextView
        android:id="@+id/tv_dialog_app_version"
        android:paddingTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@null"
            android:layout_marginEnd="6dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/colorPrimaryDark"
            android:src="@drawable/ic_code_black_24dp"/>

        <TextView
            android:id="@+id/tv_dialog_view_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:textSize="16sp"
            android:textColor="@color/linkTextColor"
            android:text="@string/dialog_text_source_code"/>

        <ImageView
            android:contentDescription="@null"
            android:layout_marginEnd="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/colorPrimaryDark"
            android:src="@drawable/ic_language_black_24dp"/>

        <TextView
            android:id="@+id/tv_dialog_view_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/linkTextColor"
            android:text="@string/dialog_text_visit_website"/>

    </LinearLayout>
</LinearLayout>